--- a/mod3_solution/css/styles.css
+++ b/mod3_solution/css/styles.css
@@ -67,7 +67,6 @@ body{
 	min-height: 700px;
 	position: relative;
 	bottom: 0;
-	/*line-height: 1.1;*/
 }
 .section-content h1{
 	font-weight: bold;
@@ -97,3 +96,4 @@ body{
 .nav-back a:hover, a:focus{
 	text-decoration: none;
 }
+	/*end content section*/
